Active / Deactive UF Reorganize Menu Set favicon - logo

--- a/templates/add_association.html
+++ b/templates/add_association.html
@@ -110,7 +110,7 @@
                   	<div class="input-group">
                     	<span class="input-group-addon"><i class="fa fa-link"></i></span>
                     	{{ form.logotype|add_class:"form-control" }}
-                    	<p class="help-block">Nomé format .png</p>
+                    	<p class="help-block">Formats: .png</p>
               	  	</div> 
               	  	</div> 
               	  	<hr>
